--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
 
-    <title>BLM Murals</title>
+    <title>BLM Murals Map</title>
 
     <link rel="stylesheet" href="/style.css">
 
@@ -21,11 +21,6 @@
   </head>
 
   <body>
-
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js" defer></script>
 
     <h1>BLM Murals</h1>
     <div id="mapid"></div>
