--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <title>BLM Murals Map</title>
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 
-    <script src="/script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
 
   <body>
